-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
v8.0, v7.3, v7.0, v6.0, v5.0
-
154
-
1
-
None
-
None
-
None
-
None
-
None
-
None
-
None
In slow variants, the chunk migration critical section engages prior to this write being sent. The results in the write being blocked and caused the chunk migration to timeout.
Add a failpoint to the test to ensure we do the write prior to the critical section being engaged.