SERVER-89859 Make move_chunk_deferred_lookup.js more robust to slower variants (#21530)

(cherry picked from commit 0d31578474da5f367b4866475764098091d2e03f)

GitOrigin-RevId: 3faaf21991b5d27be36120e5dd449b23636bbf99